# AoC

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: 2021.sh  2021.yml  2022.yml  2023.yml  ci.yml
03/: README.md
04/: code1.py
05/: README.md  code1.py  code2.py
06/: README.md  code.py
07/: README.md
08/: README.md
09/: README.md  code1.py  necronomicon.py
1-1/: code.py
1-2/: code.py
10/: README.md
10-1/: code.py
10-2/: code.py
11/: README.md  code1.py
11-1/: code.py
12-2/: code.py
13/: code2.py
13-1/: code.py
13-2/: curse.py
14/: README.md  code2.py
15/: code1.py  code2.py
17/: README.md  code1.py  code2.py
18/: README.md  code1.py  code2.py
19/: code1.py  code2.py
2-1/: code.py
2-2/: code.py
20/: code2.py
2021/: README.md
2021/01/: README.md
2021/02/: README.md  code2.py
2021/04/: README.md  code2.py
2021/06/: README.md
2021/08/: code1.py
2021/09/: README.md
2021/11/: code2.py
2021/12/: README.md  code1.py  code2.py
2021/13/: README.md
2021/14/: code1.py
2021/15/: README.md  code1.py  code2.py
2021/16/: README.md  code1.py  code2.py
2021/18/: code2.py
2021/19/: README.md  code2.py
2021/20/: code1.py
2021/22/: code1.py  render.bpy
2021/23/: code1.py
2021/24/: sample
2022/: Cargo.toml  README.md
2022/d01/: README.md
2022/d01/src/: main.rs
2022/d02/: README.md
2022/d02/src/: main.rs
2022/d03/: Cargo.toml  README.md
2022/d05/: Cargo.toml
2022/d16/: Cargo.toml  mini
2023/: CMakeLists.txt  README.md  build.sh
2023/d01/: main.cpp
2023/d02/: data  main.cpp
2023/d03/: main.cpp
2023/d04/: main.cpp
2023/d05/: main.cpp
2023/d06/: main.cpp
2023/d07/: main.cpp
2023/d08/: main.cpp
2023/d09/: main.cpp
2023/d10/: main.cpp
2023/d11/: main.cpp
2023/modules/: test_module.cpp
2023/test/: test.cpp
2023/utilities/: elf_io.h  elf_perf.h  elf_report.h
2024/: build.zig  build.zig.zon
2024/d01/: build.zig  build.zig.zon  main.zig
2024/d02/: main.zig
2024/utils/: utils.zig
21/: code1.py  code2.py
22/: code1.py  out
23/: code2.py
24/: code1.py  code2.py  notes  out
25/: code1.py
3-1/: code.py
3-2/: code.py
4-1/: data2
5-1/: code.py
5-2/: code.py
7-1/: code.py
7-2/: code.py  deep_underwater.py
8-2/: code.py
9-2/: code.py  necronomicon.py
(+19 files in other folders)
